<resources>
    <string name="app_name">Sage Domain</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textPlaceholder">Placeholder</string>
    <string name="noItems">No Items</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="saving">Saving</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="notAvailable_na">N/A</string>
    <string name="unavailable">unavailable</string>

    <string name="saveExitCancelDialog_title">Exit Without Saving?</string>
    <string name="saveExitCancelDialog_message">Press Exit to exit without saving;\nSave to Save and Exit;\nor Cancel to return to form.</string>

    <string name="sagemodel_menuadd">Add</string>
    <string name="sagemodel_menudelete">Delete</string>
    <string name="sagemodel_menusave">Save</string>

    <string name="observationGroupManagement_title">Observation Group Management</string>
    <string name="title_activity_observation_group_management">Observation Groups</string>
    <!-- observation_group_edit -->
    <string name="observationGroupEdit_lblOwnerType">Owner Type</string>
    <string name="observationGroupEdit_lblOwner">Owner Name</string>
    <string name="observationGroupEdit_hintName">Group Name</string>
    <string name="observationGroupEdit_selectOwner">Select Owner</string>

    <!-- observation type save add -->
    <string name="observationTypeSaveAdd_lblTypeName">Type Name</string>

    <string name="groupObservationAllowabelValue_hint">Allowable Value</string>

    <string name="projectSiteManagement_title">Project/Site Management</string>

    <!-- project_site_edit -->
    <string name="projectSiteEdit_lblProjectNumber">Project Number:</string>
    <string name="projectSiteEdit_lblProjectName">Project Name:</string>
    <string name="projectSiteEdit_lblSiteName">Site Name:</string>
    <string name="projectSiteEdit_descSelectProject">Select Project</string>
    <string name="projectSiteEdit_descSelectSite">Select Site</string>

    <!-- Camera -->
    <string name="cameraActivity_title">Edit Photo</string>

    <!--  MetaData  -->
    <string name="metaData_hint_name">Meta Element Name</string>
    <string name="metaData_hint_value">Meta Element Value</string>

    <!-- Owner Dialog -->
    <string name="owenerDialogFragment_title">Select Owner</string>

    <!-- GPS -->
    <string name="gps_format" formatted="false">Lat: %f Long: %f Elev: %f Acc: %f</string>

    <!-- preferences_app -->
    <string name="preferencesApp_themeTitle">Theme</string>
    <string name="preferencesApp_themeDialogTitle">Theme</string>
    <string name="preferencesApp_themeKey">appPreference_theme</string>
    <string name="preferencesApp_themeDefault">LIGHT</string>
    <string-array name="preferenceApp_themeEntries">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="preferencesApp_themeValues">
        <item>LIGHT</item>
        <item>DARK</item>
    </string-array>
    <string name="preferencesApp_elementModeTitle">Plant Elements View Mode</string>
    <string name="preferencesApp_elementModeDialogTitle">Plant Elements View Mode</string>
    <string name="preferencesApp_elementModeKey">appPreferences_elementsView</string>
    <string name="preferencesApp_elementModeDefault">DISPLAY_SCIENTIFIC_COMMON</string>
    <string-array name="preferencesApp_elementModeEntries">
        <item>Scode - Scientific Name</item>
        <item>Scode - Common Name</item>
        <item>Scientific Name - Common Name</item>
        <item>Common Name - Scientific Name</item>
    </string-array>
    <string-array name="preferencesApp_elementModeValues">
        <item>DISPLAY_SCODE_SCIENTIFIC</item>
        <item>DISPLAY_SCODE_COMMON</item>
        <item>DISPLAY_SCIENTIFIC_COMMON</item>
        <item>DISPLAY_COMMON_SCIENTIFIC</item>
    </string-array>
    <string name="preferencesApp_elementsSearchTitle">Plant Elements Search Mode</string>
    <string name="preferencesApp_elementsSearchDialogTitle">Plant Elements Search Mode</string>
    <string name="preferencesApp_elementsSearchKey">appPreferences_elementsSearch</string>
    <string name="preferencesApp_elementsSearchDefault">START</string>
    <string-array name="preferencesApp_elementsSearchEntries">
        <item>Starting With</item>
        <item>Containing</item>
    </string-array>
    <string-array name="preferencesApp_elementsSearchValues">
        <item>START</item>
        <item>CONTAINING</item>
    </string-array>
</resources>
