<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <ListPreference 
        android:key="@string/preferencesApp_themeKey"
        android:title="@string/preferencesApp_themeTitle"
        android:dialogTitle="@string/preferencesApp_themeDialogTitle"
        android:entries="@array/preferenceApp_themeEntries"
        android:entryValues="@array/preferencesApp_themeValues"
        android:defaultValue="@string/preferencesApp_themeDefault"/>
    <ListPreference
        android:key="@string/preferencesApp_elementModeKey"
        android:title="@string/preferencesApp_elementModeTitle"
        android:dialogTitle="@string/preferencesApp_elementModeDialogTitle"
        android:entries="@array/preferencesApp_elementModeEntries"
        android:entryValues="@array/preferencesApp_elementModeValues"
        android:defaultValue="@string/preferencesApp_elementModeDefault"/>
    <ListPreference
        android:key="@string/preferencesApp_elementsSearchKey"
        android:title="@string/preferencesApp_elementsSearchTitle"
        android:dialogTitle="@string/preferencesApp_elementsSearchDialogTitle"
        android:entries="@array/preferencesApp_elementsSearchEntries"
        android:entryValues="@array/preferencesApp_elementsSearchValues"
        android:defaultValue="@string/preferencesApp_elementsSearchDefault"/>
</PreferenceScreen>
