<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:columnCount="2"
    android:rowCount="4">
    <TextView 
        android:id="@+id/observationGroupEdit_lblOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="@string/observationGroupEdit_lblOwner"/>
    <TextView 
        android:id="@+id/observationGroupEdit_lblOwnerType"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observationGroupEdit_lblOwnerType"/>
    <ImageButton 
        android:id="@+id/observationGroupEdit_selectOwner"
        android:src="?attr/search_pic"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_rowSpan="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/observationGroupEdit_selectOwner"/>
    <EditText 
        android:id="@+id/observationGroupEdit_txtName"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:hint="@string/observationGroupEdit_hintName"/>
</GridLayout>
