<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <EditText 
        android:id="@+id/observationTypeSelectAdd_typeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:hint="@string/observationTypeSaveAdd_lblTypeName"/>
    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        layout="@android:layout/list_content" />
    <LinearLayout 
        android:id="@+id/observationTypeSelectAdd_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/observationTypeSelectAdd_cancel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="@android:attr/buttonBarButtonStyle"/>
        <Button 
            android:id="@+id/observationTypeSelectAdd_save"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:text="@string/save"
            style="@android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</LinearLayout>
